# mite

./: CMakeLists.txt
include/: mite.hpp
include/modules/mite/: mite.ixx  rect.ixx  square.ixx
include/modules/mite/flat/: mod.ixx  point.ixx  size.ixx
src/: main.cpp
tests/: test_basic.cpp  test_flat_point.cpp
